# PyPole

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  CONTRIBUTING.md  DOCS_INDEX.md  PROJECT_OVERVIEW.md  QUICKSTART.sh  README.md  SETUP.md  TECH_STACK.md  docker-compose.yml  renovate.json
.github/instructions/: development.instructions.md  landing-components.instructions.md  nextjs.instructions.md  project-structure.instructions.md  rules.instructions.md  self-improve.instructions.md  tailwind-styling.instructions.md  tech-stack-dependencies.instructions.md  tools.instructions.md  typescript-style.instructions.md  ui-components.instructions.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c9088594e283_add_users_table_with_preferences.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  comparison.py  fastf1.py  jolpica.py  predictor.py  profiles.py  race_weekend.py  strategy.py  widgets.py
backend/app/core/: config.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: user.py
backend/app/services/: __init__.py  comparison_service.py  fastf1_service.py  jolpica_service.py  predictor_service.py  profile_service.py  race_weekend_service.py  strategy_service.py  widget_service.py
backend/app/tests/: test_main.py
backend/app/utils/: cache.py
frontend/: .env.example  README.md  components.json  middleware.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  (+1 more)
(+44 files in other folders)
